# pineapple

./: .gitignore  BUILD_DEB.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
debian/: changelog  control  rules
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: BuildLog.jsx  ClonePanel.jsx  DetectionCard.jsx  DockerfilePreview.jsx  Sidebar.jsx  Toast.jsx
scripts/: dev.py  dev.sh  pineapple-dev  test_cli.py  write_server.py
src/pineapple/: __init__.py  __main__.py  _dashboard_html.py  builder.py  cli.py  db.py  detect.py  dockerfile.py  env.py  server.py
src/pineapple/static/: index.html
src/pineapple/static/assets/: index-BpP1vYMW.js  index-CqUT8N_T.css
tests/: test_clone_detect.py
