[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pineapple"
version = "1.0.0"
description = "Smart framework detection, Dockerfile generation & container builds — zero dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OctoFlow", email = "octoflow@example.com"},
]
keywords = ["docker", "framework-detection", "dockerfile", "devops", "ci-cd", "container"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/your-username/pineapple"
Repository = "https://github.com/your-username/pineapple"

[project.scripts]
pineapple = "pineapple.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pineapple = ["static/*", "static/assets/*"]
